CheckPoint - cg1faaee92

--- a/frontend_app/.env.example
+++ b/frontend_app/.env.example
@@ -1,3 +1,10 @@
-# Copy to .env and set values. Do NOT commit actual secrets.
-# Create React App requires variables prefixed with REACT_APP_
-REACT_APP_PERPLEXITY_API_KEY=your_perplexity_api_key_here
+# Example environment variables for the ConversAI React frontend
+# Copy this file to ".env" and set your Perplexity API key.
+# Note: For Create React App, variables must start with REACT_APP_ to be injected at build time.
+
+# Preferred name for CRA:
+REACT_APP_PERPLEXITY_API_KEY=your-perplexity-api-key-here
+
+# Optional fallback names supported by the app (not recommended, but tolerated):
+# REACT_APP_REACT_APP_PERPLEXITY_API_KEY=your-perplexity-api-key-here
+# PERPLEXITY_API_KEY=your-perplexity-api-key-here
